--- a/password/app/build.gradle
+++ b/password/app/build.gradle
@@ -10,14 +10,15 @@ android {
         minSdk 29
         targetSdk 30
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
