--- a/password/app/src/main/AndroidManifest.xml
+++ b/password/app/src/main/AndroidManifest.xml
@@ -4,7 +4,15 @@
     package="cn.snowt.password">
 
     <uses-permission android:name="android.permission.VIBRATE" />
-
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
     <application
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="false"
